Fixing footer border on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,8 @@ footer {
     font-size:0.7em;
     margin:0;
   }
+  footer {
+    border-top: 0;
 }
 
 @media (max-width: 564px) {
